--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/jpg" href="képek/weblap ikon.jpg">
+    <link rel="icon" type="image/jpg" href="weblap ikon.jpg">
     <title>Miért jó a crossut</title>
 </head>
 <body>
