--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Miért jó a crossut</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#frakciók">frakciók</a></li>
-            <li><a href="#shop">shop</a></li>
-            <li><a href="#alapok">alapok</a></li>
-        </ul>
-        </nav>
+    <nav class="navbar">
+    <div class="logo">Crossout</div>
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+    <ul class="nav-links" id="nav-links">
+        <li><a href="#frakciók">Frakciók</a></li>
+        <li><a href="#shop">Shop</a></li>
+        <li><a href="#alapok">Alapok</a></li>
+    </ul>
+</nav>
         <section id="frakciók" class="card">
             <H2>Frakciók</H2>
             <p>A crossoutba jelenleg 11db frakció van <span id="frak">(a kép csak 8 at tartalmaz)</span></p>
@@ -57,7 +59,7 @@ A játékban használható két fő valuta a Coins (valós pénzért vásárolha
 A Crossout shop rendszeresen frissül, így érdemes időnként benézni, hogy ne maradj le az új fegyverekről, páncélokról vagy díszítőelemekről.</p>
         </section>
         <section id="alapok" class="card">
-<h2>alapók</h2>
+<h2>alapok</h2>
 <p>A Crossoutban a járművedet te építed meg alkatrészekből, ezért fontos, hogy a szerelés során egyensúlyt tarts a sebesség, páncélzat és fegyverzet között.
 <br>
 A harcokban érdemes célzottan leszedni az ellenfél fegyvereit vagy kerekét, így gyorsabban győzhetsz.
@@ -68,5 +70,7 @@ A reputáció gyűjtése kulcsfontosságú, mert ez nyitja meg az új frakciókh
 <br>
 Ne feledd, hogy a játékban a csapatmunka sokszor többet ér, mint az egyéni erőfeszítés, ezért csatlakozz klánokhoz vagy játssz csapatban, hogy jobban haladj előre.</p>
         </section>
+
+<script src="script.js"></script>
 </body>
 </html>
