--- a/index.html
+++ b/index.html
@@ -71,6 +71,25 @@ A reputáció gyűjtése kulcsfontosságú, mert ez nyitja meg az új frakciókh
 Ne feledd, hogy a játékban a csapatmunka sokszor többet ér, mint az egyéni erőfeszítés, ezért csatlakozz klánokhoz vagy játssz csapatban, hogy jobban haladj előre.</p>
         </section>
 
+<section id="builds" class="card">
+    <h2>Builds</h2>
+    <p id="builds-p">Néhány érdekes és halálos gépezet</p>
+
+    <div class="build-container">
+        <div class="biuld-card">
+            <img src="build spider.webp" alt="A Poklábú">
+            <p class="kepek">A 6 lábú</p>
+        </div>
+        <div class="biuld-card">
+            <img src="whirl build.jpg" alt="A golyószoró">
+            <p class="kepek">Páncéltörő automata ágyú (x3)</p>
+        </div>
+        <div class="biuld-card">
+            <img src="build tank.png" alt="A Tank">
+            <p class="kepek">Páncélos halál</p>
+        </div>
+    </div>
+</section>
 <script src="script.js"></script>
 </body>
 </html>
